skiplang/compiler/invalid_tests/runtime/try_catch_break_2.sk
fun main(): void {
  i = 0;
  while (i < 1) {
    try {
      !i = i + 1
    } catch {
    | _ -> break
    }
  }
}
